# CombinatorialSpace

./: .gitignore
Affine/Memory/contexts_map/: Cargo.toml
Affine/Memory/contexts_map/src/: main.rs
Affine/Memory/contexts_map/src/diffspace/: analytics.rs  bitvector.rs  code_space.rs  context.rs  context_map.rs  context_memory_item.rs  mod.rs
LineShift/line_shift/: Cargo.toml
LineShift/line_shift/src/: main.rs
SupervisedLearning/: SupervisedLearning.sln
SupervisedLearning/CombinatorialSpace/BinaryVectors/: Cluster.cs  ClusterCreatedEventHandler.cs  ClusterDestroyedEventHandler.cs  CombinatorialSpaceBuilder.cs  IBitArrayChecker.cs  ICluster.cs  ICombinatorialSpaceBuilder.cs  IPoint.cs  Point.cs  PointActivatedEventHandler.cs
SupervisedLearning/CombinatorialSpace/Strategies/: BitArrayCheckStrategy.cs  TrackingIndexesEqualsStrategy.cs
SupervisedLearning/CombinatorialSpace_Tests/: Cluster_Test.cs  CombinatorialSpaceBuilder_Test.cs  CombinatorialSpace_Tests.csproj  Point_Test.cs
SupervisedLearning/CombinatorialSpace_Tests/BaseClasses/: BaseTest.cs
SupervisedLearning/Concepts/BinaryVectorsBuilders/: IBinaryVectorBuilder.cs  RandomBinaryVectorBuilder.cs
SupervisedLearning/Concepts/Concepts/: IConceptItem.cs  IConceptSystemBuilder.cs  (+2 more)
SupervisedLearning/Concepts_Tests/: Concepts_Tests.csproj
SupervisedLearning/SupervisedLearning/: Program.cs  SupervisedLearning.csproj
diff_context_space/: Cargo.toml
diff_context_space/src/: context.rs  context_space.rs  information.rs  interpretations.rs  lib.rs  rule.rs  transformation.rs  transformations.rs
(+16 files in other folders)
