[package]
name = "diff_context_space"
version = "0.1.0"
authors = ["Illia <iluhakhurtin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# multithreading
rayon = "1.5"

# for searching/ordering float values
ordered-float = "2.0.0"

# random generation
rand = "0.7.3"

# generic number traits for representing Primitive Integers
num-traits = "0.2.8"

# serialization / deserialization
serde = { version = "1.0.118", features = ["derive"] }
bincode = "1.3.3"

# graphics
image = "0.23.13"
imageproc = "0.22.0"