[package]
name = "contexts_map"
version = "0.1.0"
authors = ["Illia Khurtin <ikhurtin@wfsaustralia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.5"
ndarray = "0.13.0"
derive_more = "0.14.0"
float-cmp = "0.4"